--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: scRNAseq
+Package: EMC_SKlab_scRNAseq
 Type: Package
 Title: Single-cell RNA sequencing package for SKlab
 Version: 0.1.0
@@ -16,7 +16,10 @@ Imports:
     dplyr,
     ggplot2,
     stringr,
-    data.table
+    data.table,
+    SingleR,
+    gridExtra,
+    leiden
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
