--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,14 +9,17 @@ License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
-Depends:
-    Seurat,
-	enrichplot
 Imports:
+    Seurat,
+	enrichplot,
     SeuratObject,
+	SeuratData,
+	SeuratWrappers,
+	SingleCellExperiment,
     reshape2,
     dplyr,
     ggplot2,
+	ggrepel,
     stringr,
     data.table,
     SingleR,
@@ -25,7 +28,10 @@ Imports:
     patchwork,
     chron,
     tidyr,
-    magrittr
+    magrittr,
+	monocle3
+Remotes:
+    mauritsunkel/EMC-SKlab-seurat (Seurat)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
