--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,15 @@
 
 export("%>%")
 export(DE2volcanoPlot)
+export(annotate_with_kriegstein_data)
+export(chunk_kriegstein_data)
 export(differential_expression_analysis)
 export(individual_analysis)
 export(plot_cells.adjusted)
 export(pseudotime)
 export(run_fgsea)
 export(samples_integration)
+export(visualize_kriegstein_annotated_data)
 import(org.Hs.eg.db)
 importFrom(dplyr,.data)
 importFrom(gridExtra,arrangeGrob)
