--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,10 @@ export(DE2volcanoPlot)
 export(annotate_with_kriegstein_data)
 export(chunk_kriegstein_data)
 export(differential_expression_analysis)
-export(individual_analysis)
 export(plot_cells.adjusted)
 export(pseudotime)
 export(run_fgsea)
+export(sample_analysis)
 export(samples_integration)
 export(visualize_kriegstein_annotated_data)
 import(org.Hs.eg.db)
