--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Imports:
 	pheatmap (>= 1.0.12),
 	RColorBrewer (>= 1.1-3),
 	msigdb (>= 1.4.0),
-	org.Hs.eg.db (>= 3.15.0)
+	org.Hs.eg.db (>= 3.15.0),
+	RcppAnnoy (>= 0.0.20)
 Remotes:
     mauritsunkel/Seurat
 Suggests: 
