--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: EMC.SKlab.scRNAseq
 Type: Package
 Title: Single-cell RNA sequencing package for SKlab
-Version: 1.2.3
+Version: 1.2.4
 Author: Maurits Unkel
 Maintainer: Maurits Unkel <m.unkel@erasmusmc.nl>
 Description: Pipeline for automating scRNAseq analysis in the lab.
@@ -12,8 +12,8 @@ RoxygenNote: 7.3.2
 Depends:
 	R (>= 4.2)
 Imports:
-    Seurat,
-    SeuratObject (>= 4.1.3),
+    Seurat (>= 5.1.0),
+    SeuratObject (>= 5.0.2),
 	SingleCellExperiment (>= 1.18.1),
 	SingleR (>= 1.10.0),
 	scuttle (>= 1.6.3),
