--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: EMC.SKlab.scRNAseq
 Type: Package
 Title: Single-cell RNA sequencing package for SKlab
-Version: 1.2.26
+Version: 1.2.27
 Author: Maurits Unkel
 Maintainer: Maurits Unkel <m.unkel@erasmusmc.nl>
 Description: Pipeline for automating scRNAseq analysis in the lab.
@@ -33,7 +33,8 @@ Imports:
 	RColorBrewer (>= 1.1-3),
 	msigdb (>= 1.4.0),
 	org.Hs.eg.db (>= 3.15.0),
-	RcppAnnoy (>= 0.0.20)
+	RcppAnnoy (>= 0.0.20),
+	openxlsx (>= 4.2.7)
 Remotes:
     kushnerlab/Seurat,
 	satijalab/seurat-wrappers
