--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: EMC.SKlab.scRNAseq
 Type: Package
 Title: Single-cell RNA sequencing package for SKlab
-Version: 1.2.27
+Version: 1.3.0
 Author: Maurits Unkel
 Maintainer: Maurits Unkel <m.unkel@erasmusmc.nl>
 Description: Pipeline for automating scRNAseq analysis in the lab.
@@ -34,7 +34,8 @@ Imports:
 	msigdb (>= 1.4.0),
 	org.Hs.eg.db (>= 3.15.0),
 	RcppAnnoy (>= 0.0.20),
-	openxlsx (>= 4.2.7)
+	openxlsx (>= 4.2.7),
+	EnhancedVolcano (>= 1.22.0)
 Remotes:
     kushnerlab/Seurat,
 	satijalab/seurat-wrappers
