Optimized SCT + Harmony workflow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(DE2volcanoPlot)
 export(annotate_visualize_with_kriegstein_data)
 export(chunk_kriegstein_data)
 export(differential_expression_analysis)
+export(integration_analysis)
 export(plotEnhancedVolcano)
 export(pseudotime)
 export(run_fgsea)
