Updated selection and reintegration for implementation with the workflow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(pseudotime)
 export(run_fgsea)
 export(sample_analysis)
 export(samples_integration)
+export(selection_reintegration)
 export(visualize_kriegstein_annotated_data)
 import(org.Hs.eg.db)
 importFrom(dplyr,.data)
