--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: EMC.SKlab.scRNAseq
 Type: Package
 Title: Single-cell RNA sequencing package for SKlab
-Version: 1.4.16
+Version: 1.4.17
 Author: Maurits Unkel
 Maintainer: Maurits Unkel <m.unkel@erasmusmc.nl>
 Description: Pipeline for automating scRNAseq analysis in the lab.
@@ -38,7 +38,8 @@ Imports:
 	EnhancedVolcano (>= 1.22.0),
 	anndata (>= 0.7.5.6),
 	SoupX (>= 1.6.2),
-	scDblFinder (>= 1.18.0)
+	scDblFinder (>= 1.18.0),
+	harmony (>= 1.2.1)
 Remotes:
     kushnerlab/Seurat,
 	satijalab/seurat-wrappers
