--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: EMC.SKlab.scRNAseq
 Type: Package
 Title: Single-cell RNA sequencing package for SKlab
-Version: 1.5.11
+Version: 1.6.0
 Author: Maurits Unkel
 Maintainer: Maurits Unkel <m.unkel@erasmusmc.nl>
 Description: Pipeline for automating scRNAseq analysis in the lab.
@@ -39,7 +39,8 @@ Imports:
 	anndata (>= 0.7.5.6),
 	SoupX (>= 1.6.2),
 	scDblFinder (>= 1.18.0),
-	harmony (>= 1.2.1)
+	harmony (>= 1.2.1),
+	qs (>= 0.27.2)
 Remotes:
     kushnerlab/Seurat,
 	satijalab/seurat-wrappers
