--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(run_fgsea)
 export(sample_analysis)
 export(samples_integration)
 export(selection_reintegration)
+export(thisFilePath)
 export(visualize_kriegstein_annotated_data)
 import(org.Hs.eg.db)
 importFrom(dplyr,.data)
