--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: EMC.SKlab.scRNAseq
 Type: Package
 Title: Single-cell RNA sequencing package for SKlab
-Version: 1.6.10
+Version: 1.7.0
 Author: Maurits Unkel
 Maintainer: Maurits Unkel <m.unkel@erasmusmc.nl>
 Description: Pipeline for automating scRNAseq analysis in the lab.
@@ -41,7 +41,8 @@ Imports:
 	scDblFinder (>= 1.18.0),
 	harmony (>= 1.2.1),
 	qs (>= 0.27.2),
-	rstudioapi (>= 0.16.0)
+	rstudioapi (>= 0.16.0),
+	DESeq2 (>= 1.44.0)
 Remotes:
     kushnerlab/Seurat,
 	satijalab/seurat-wrappers
