Removing DESeq2 dependency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: EMC.SKlab.scRNAseq
 Type: Package
 Title: Single-cell RNA sequencing package for SKlab
-Version: 1.7.0
+Version: 1.7.1
 Author: Maurits Unkel
 Maintainer: Maurits Unkel <m.unkel@erasmusmc.nl>
 Description: Pipeline for automating scRNAseq analysis in the lab.
@@ -41,8 +41,7 @@ Imports:
 	scDblFinder (>= 1.18.0),
 	harmony (>= 1.2.1),
 	qs (>= 0.27.2),
-	rstudioapi (>= 0.16.0),
-	DESeq2 (>= 1.44.0)
+	rstudioapi (>= 0.16.0)
 Remotes:
     kushnerlab/Seurat,
 	satijalab/seurat-wrappers
