Added DE stats plotting avg_log2fc and pct.x in a .pdf, added filtering on pct.both and/or pct.either, saving filtered genes as well for later inspection

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(chunk_kriegstein_data)
 export(differential_expression_analysis)
 export(integration_analysis)
 export(plotEnhancedVolcano)
+export(plot_DE_stats)
 export(pseudotime)
 export(run_fgsea)
 export(sample_analysis)
